2020-08-31  Jose E. Marchesi  <jemarch@gnu.org>

	* pickles/dwarf.pk (Dwarf_Section_Offset): New method `value'.
	(Dwarf_Type_Unit_Header): Define.
	(Dwarf_CIE): Likewise.
	* maps/dwarf.map: New file.
	* maps/elf.map: Move dwarf entries to dwarf.map.
	* maps/Makefile.am (dist_maps_DATA): Add dwarf.map.

2020-08-30  Jose E. Marchesi  <jemarch@gnu.org>

	* pickles/dwarf.pk: Add more constants.

2020-08-30  Jose E. Marchesi  <jemarch@gnu.org>

	* pickles/future/dwarf.pk: Remove.
	* pickles/dwarf.pk: Copied and adapted from future/dwarf.pk.
	* maps/elf.map: Add debug_info.

2020-08-27  Jose E. Marchesi  <jemarch@gnu.org>

	* gui/poke-gui.c: Include locale.h, for setlocale.

2020-08-27  Jose E. Marchesi  <jemarch@gnu.org>

	* pickles/leb128.pk: Simplify pretty printing.

2020-08-26  Jose E. Marchesi  <jemarch@gnu.org>

	* pickles/bpf.pk (BPF_Insn_Opcode.class): Turn into method.
	(BPF_Insn_Opcode.imm64): Likewise.

2020-08-26  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-anal.c (pkl_anal1_ps_type_struct): Allow methods
	anywhere in union types.  Declarations are still only allowed
	before alternatives.
	* libpoke/pkl-gen.pks (struct_mapper): Support methods in union
	types.
	(struct_constructor): Likewise.
	* testsuite/poke.pkl/scons-union-method-1.pk: New test.
	* testsuite/poke.pkl/scons-union-method-2.pk: Likewise
	* testsuite/poke.pkl/scons-union-method-3.pk: Likewise.
	* testsuite/poke.pkl/scons-union-method-4.pk: Likewise.
	* testsuite/poke.map/maps-unions-method-1.pk: Likewise.
	* testsuite/poke.map/maps-unions-method-2.pk: Likewise.
	* testsuite/poke.map/maps-unions-method-3.pk: Likewise.
	* testsuite/poke.pkl/union-pretty-print-1.pk: Likewise.
	* testsuite/Makefile.am (EXTRA_DIST): Add new tests.

2020-08-26  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pk-val.c (pk_type_code): Fix regression.
	* poke/pk-map.c (pk_map_load_parsed_map): Remove spurious trace.

2020-08-26  Jose E. Marchesi  <jemarch@gnu.org>
